--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ typing_extensions==4.11.0
 tzdata==2024.1
 uri-template==1.3.0
 urllib3==2.2.1
-uvicorn==0.29.0
+gunicorn==22.0.0
 virtualenv==20.26.2
 wcwidth==0.2.13
 webcolors==1.13
