--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,100 @@
-Werkzeug==3.0.2
-wheel==0.43.0
-widgetsnbextension==4.0.11
-wrapt==1.16.0
+absl-py==2.1.0
+annotated-types==0.6.0
+anyio==4.3.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.8.1
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+attrs==23.2.0
+Babel==2.15.0
+bcrypt==4.1.2
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.8.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.8
+Django==5.0.6
+django-dotenv==1.4.2
+djangorestframework==3.15.1
+executing==2.0.1
+fastapi==0.110.2
+fastjsonschema==2.19.1
+filelock==3.14.0
+Flask==3.0.3
+flatbuffers==24.3.25
+fonttools==4.51.0
+fqdn==1.5.1
+gast==0.5.4
+google-pasta==0.2.0
+grpcio==1.63.0
+gunicorn==22.0.0
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httpx==0.27.0
+humanfriendly==10.0
+idna==3.7
+imageio==2.34.1
+isoduration==20.11.0
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.4.0
+json5==0.9.25
+jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+keras==3.3.3
+kiwisolver==1.4.5
+lazy_loader==0.4
+libclang==18.1.1
+llvmlite==0.42.0
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.0.2
+ml-dtypes==0.3.2
+mpmath==1.3.0
+namex==0.0.8
+nest-asyncio==1.6.0
+networkx==3.3
+numba==0.59.1
+numpy==1.26.4
+onnxruntime==1.17.3
+opencv-python==4.9.0.80
+opt-einsum==3.3.0
+optree==0.11.0
+overrides==7.7.0
+packaging==24.0
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+pickle-mixin==1.0.2
+pillow==10.3.0
+pipenv==2024.0.0
+platformdirs==4.2.1
+pooch==1.8.1
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
 protobuf==4.25.3
 psutil==5.9.8
 psycopg==3.1.19
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pure-eval==0.2.2
 pycparser==2.22
@@ -56,13 +146,12 @@ typing_extensions==4.11.0
 tzdata==2024.1
 uri-template==1.3.0
 urllib3==2.2.1
-gunicorn==22.0.0
+gunicorn==0.29.0
 virtualenv==20.26.2
 wcwidth==0.2.13
 webcolors==1.13
-webencodings==0.5
+webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.0.2
 wheel==0.43.0
-widgetsnbextension==4.0.11
 wrapt==1.16.0
